--- a/css/member.css
+++ b/css/member.css
@@ -5,7 +5,7 @@
 .member-list-hero-icon {
   width: 30px;
   height: 30px;
-  object-fit: contain;
+  object-fit: cover;
 }
 .member-address,
 .member-created_at {
