--- a/css/sean.css
+++ b/css/sean.css
@@ -10,6 +10,12 @@
     text-overflow: ellipsis;
 }
 
-.add-form-toggle{
+.display-toggle{
     display: none;
+}
+
+.imgBox{
+    max-height: 100px;
+    max-width: 100px;
+    /* height: 200px; */
 }
